<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_display">0</string>
    <string name="touchdown_button">touchdown</string>
    <string name="field_goal_button">field goal</string>
    <string name="safety_button">safety</string>
    <string name="extra_point_button">extra point</string>
    <string name="reset_button">RESET</string>
</resources>
